--- a/continue/styl.css
+++ b/continue/styl.css
@@ -153,7 +153,7 @@ footer small {
 #sub-content h3 {
     position: relative;
     z-index: 2; 
-    color: #890101;
+    color: #fb3f00;
     font-size: 60px;
 }
 #index h3{
@@ -206,7 +206,7 @@ position: relative;
     text-align: left;
 }
 .middle h2{
-    color: #a20d0d;
+    color: #fb3f00;
     text-align: center;
     font-size: 60px;
     font-weight: bold;
